Cleaned up some files

--- a/style.css
+++ b/style.css
@@ -66,4 +66,4 @@ body .main .desktop .notif-panel {
 .active {
   border-bottom: 2px solid white;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=style.css.map */
