--- a/style.scss
+++ b/style.scss
@@ -68,6 +68,12 @@ body{
                 // padding: 20px 30px;
                 display: flex;
                 flex-direction: column;
+                svg {
+                    width: 18px;
+                    fill:rgba(255, 255, 255, 0.725);
+                    margin-right: 10px;
+                    height: 80%;
+                }
                 span {
                     margin: 0px;
                     width: 100%;
@@ -79,11 +85,6 @@ body{
                 hr {
                     width: 100%;
                     border-color: rgba(255, 255, 255, 0.3);
-                }
-                svg {
-                    width: 18px;
-                    fill:rgba(255, 255, 255, 0.725);
-                    margin-right: 10px;
                 }
             }
         }
