--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body .main .topbar {
       -ms-flex-align: center;
           align-items: center;
   padding: 2px 10px;
-  height: 3%;
+  height: 4vh;
   background-color: rgba(0, 0, 0, 0.5);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
