--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body{
             justify-content: space-between;
             align-items: center;
             padding:2px 10px;
-            height: 3%;
+            height: 4vh;
             background-color: rgba(0,0,0,0.5);
             backdrop-filter: blur(5px);
             span {
@@ -92,6 +92,8 @@ body{
 }
 
 .active {
+    // height: 100%;
+    // padding-bottom: -1px;
     border-bottom: 2px solid white;
     margin-bottom: 0px;
 }
